add cpp ros snippets

--- a/lua/snips/cpp/package.json
+++ b/lua/snips/cpp/package.json
@@ -8,6 +8,10 @@
       {
         "language": "cpp",
         "path": "./base.json"
+      },
+      {
+        "language": "cpp",
+        "path": "./ros.json"
       }
     ]
   }
